--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,6 @@ project(SortingAlgorithm)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SortingAlgorithm main.cpp
-        InsertionSort.cpp
-        InsertionSort.h
-        MergeSort.cpp
-        MergeSort.h
-        Merge_Insertion_Sort.cpp
-        Merge_Insertion_Sort.h)
+add_executable(SortingAlgorithm
+        main.cpp
+)
